--- a/XcodeCoverage.xcconfig
+++ b/XcodeCoverage.xcconfig
@@ -1,5 +1,5 @@
-// XcodeCoverage by Jon Reid, https://qualitycoding.org/
-// Copyright 2020 Quality Coding, Inc. See LICENSE.txt
+// XcodeCoverage by Jon Reid, https://qualitycoding.org
+// Copyright 2021 Quality Coding, Inc. See LICENSE.txt
 
 GCC_GENERATE_TEST_COVERAGE_FILES = YES
 GCC_INSTRUMENT_PROGRAM_FLOW_ARCS = YES
